Fix button layout problem on IE

--- a/src/hg/encode/hgEncodeSubmit/public/stylesheets/encode.css
+++ b/src/hg/encode/hgEncodeSubmit/public/stylesheets/encode.css
@@ -105,6 +105,10 @@ text-decoration: none;
 }
 
 input {
-    margin: 2px;
     font-size: 12pt;
+    margin: 2px;
+}
+
+.button-to {
+    margin: 0;
 }
